# state-of-mind

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
examples/: research_agent.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DiffViewer.tsx  ExecutionList.tsx  ExecutionView.tsx  JsonViewer.tsx  ReplaySlider.tsx  RoutingInspector.tsx  Timeline.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
src/lgdebug/: __init__.py
src/lgdebug/adapters/: base.py  langgraph.py
src/lgdebug/cli/: main.py
src/lgdebug/core/: collector.py  config.py  diff.py  models.py  serialization.py
src/lgdebug/replay/: engine.py
src/lgdebug/server/: app.py
src/lgdebug/storage/: base.py  sqlite.py  sqlite_sync.py
tests/integration/: test_collector.py
tests/unit/: test_diff.py  test_serialization.py  test_storage.py
